<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/tv_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/farticulos"
            android:textColor="@color/farticulo"
            android:textSize="22sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/cod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:counterEnabled="true"
            app:counterMaxLength="15">

            <EditText
                android:id="@+id/codigo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fcodigo"
                android:inputType="number"
                android:maxLength="15"
                android:textStyle="bold"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:counterEnabled="true"
            app:counterMaxLength="35">

            <EditText
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fnombre"
                android:maxLength="35"
                android:textStyle="bold" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <EditText
                android:id="@+id/categoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fcategoria"
                android:maxLength="30"
                android:textStyle="bold" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:counterEnabled="true"
            app:counterMaxLength="15">

            <EditText
                android:id="@+id/stock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fstock"
                android:inputType="number"
                android:maxLength="15"
                android:textStyle="bold" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:counterEnabled="true"
            app:counterMaxLength="15">

            <EditText
                android:id="@+id/precio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Precio"
                android:inputType="numberDecimal"
                android:maxLength="15"
                android:textStyle="bold"
                android:text="0"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:counterEnabled="true"
            app:counterMaxLength="400">

            <EditText
                android:id="@+id/imagen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Imagen"
                android:inputType="textUri"
                android:text=" "
                android:textStyle="bold" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:counterEnabled="true"
            app:counterMaxLength="400">

            <EditText
                android:id="@+id/descipcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fdescripcion"
                android:inputType="textMultiLine"
                android:maxLength="300"
                android:textStyle="bold"
                android:text=" "/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_marginHorizontal="12dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3sp"
                android:layout_weight="1"
                android:text="@string/fcategoria"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/sCategoria"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"></Spinner>

        </LinearLayout>

        <Button
            android:id="@+id/fbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="20dp"
            android:text="@string/fanadir"
            android:textSize="15sp"
            android:theme="@style/MyButton" />

    </LinearLayout>
</ScrollView>
